[package]
name = "http-request"
version = "0.1.0"
edition = "2021"

[features]
default = []
std = ["http/std"]
reqwest = ["dep:reqwest"]

[dependencies]
http = { version = "1", default-features = false }
http-body = { version = "1", default-features = false }
http-body-util = { version = "0.1", default-features = false }
futures-core = { version = "0.3", default-features = false, features = [
  "alloc",
] }
bytes = { version = "1", default-features = false }

serde_json = { version = "1" }
serde = { version = "1" }

reqwest = { version = "0.12", optional = true }
