[package]
name = "reggie"
version = "0.1.0"
edition = "2021"

[features]
default = ["tower-service"]
reqwest = ["dep:reqwest"]
json = ["serde", "serde_json"]
tower = ["tower-service"]

[dependencies]
http = { version = "1", default-features = false }
http-body = { version = "1", default-features = false }
http-body-util = { version = "0.1", default-features = false }
futures-core = { version = "0.3", default-features = false, features = [
  "alloc",
] }
bytes = { version = "1", default-features = false }

# Json
serde_json = { version = "1", optional = true }
serde = { version = "1", optional = true }

# Rewest
reqwest = { version = "0.12", optional = true }

tower-service = { version = "0.3", optional = true }
